# nsys-profiling-poc

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  README.md  activate_env.sh  pyproject.toml  requirements.txt  run_example.py  setup_venv.sh  test_environment.py
cpp/: 1_basic_cpu_profiling.cpp  2_matrix_operations.cpp  3_multithreading_example.cpp  4_nvtx_annotations.cpp  5_memory_intensive.cpp  CMakeLists.txt
python/: 1_basic_cpu_profiling.py  2_matrix_operations.py  3_multiprocessing_example.py  4_nvtx_annotations.py  5_io_bound_example.py
scripts/: activate_venv.sh  advanced_profiling.sh  analyze_results.sh  compare_results.py  generate_visual_report.py  nsys_with_sudo.sh  profile_all.sh  setup_cpu_profiling.sh
